[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Options.gd" type="Script" id=1]
[ext_resource path="res://themes/FreshmanMiddle.tres" type="Theme" id=2]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -452.0
margin_top = -377.0
margin_right = -58.9999
margin_bottom = -108.0
rect_scale = Vector2( 2.47677, 2.74072 )

[node name="FullScreen" type="CheckBox" parent="VBoxContainer"]
margin_right = 393.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.396078, 0.905882, 0.380392, 1 )
text = "Full window mode"

[node name="Sound" type="CheckBox" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 393.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0.396078, 0.905882, 0.380392, 1 )
text = "Sound"

[node name="AutomaticDice" type="CheckBox" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 393.0
margin_bottom = 83.0
custom_colors/font_color = Color( 0.396078, 0.905882, 0.380392, 1 )
text = "Automatic dice"

[node name="HBAutosaves" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 87.0
margin_right = 393.0
margin_bottom = 114.0

[node name="Label" type="Label" parent="VBoxContainer/HBAutosaves"]
margin_top = 5.0
margin_right = 219.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.396078, 0.905882, 0.380392, 1 )
text = "Autosaves number"

[node name="Autosaves" type="LineEdit" parent="VBoxContainer/HBAutosaves"]
margin_left = 223.0
margin_right = 341.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.396078, 0.905882, 0.380392, 1 )
text = "10"
align = 1
max_length = 3

[node name="HBDifficulty" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 393.0
margin_bottom = 141.0

[node name="Label" type="Label" parent="VBoxContainer/HBDifficulty"]
margin_top = 3.0
margin_right = 192.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.396078, 0.905882, 0.380392, 1 )
text = "Game difficulty"

[node name="Difficulty" type="OptionButton" parent="VBoxContainer/HBDifficulty"]
margin_left = 196.0
margin_right = 225.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0.396078, 0.905882, 0.380392, 1 )

[node name="HBLanguages" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 145.0
margin_right = 393.0
margin_bottom = 168.0

[node name="Label" type="Label" parent="VBoxContainer/HBLanguages"]
margin_top = 3.0
margin_right = 109.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.396078, 0.905882, 0.380392, 1 )
text = "Language"

[node name="Language" type="OptionButton" parent="VBoxContainer/HBLanguages"]
margin_left = 113.0
margin_right = 142.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0.396078, 0.905882, 0.380392, 1 )

[node name="Return" type="Button" parent="VBoxContainer"]
margin_top = 172.0
margin_right = 393.0
margin_bottom = 195.0
rect_pivot_offset = Vector2( 79, 10 )
custom_colors/font_color = Color( 0.396078, 0.905882, 0.380392, 1 )
text = "Return"

[connection signal="toggled" from="VBoxContainer/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="toggled" from="VBoxContainer/Sound" to="." method="_on_Sound_toggled"]
[connection signal="toggled" from="VBoxContainer/AutomaticDice" to="." method="_on_AutomaticDice_toggled"]
[connection signal="text_changed" from="VBoxContainer/HBAutosaves/Autosaves" to="." method="_on_Autosaves_text_changed"]
[connection signal="item_selected" from="VBoxContainer/HBDifficulty/Difficulty" to="." method="_on_Difficulty_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBLanguages/Language" to="." method="_on_Language_item_selected"]
[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_Return_pressed"]
